--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
+engine-strict = true
 ignore-workspace-root-check = true
 prefer-workspace-packages = true
 auto-install-peers = true
+package-import-method = copy
