--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
     "name": "@nic/mono",
     "displayName": "NIC Monorepo",
+    "description": "Amet ipsum ipsum excepteur nostrud proident sint excepteur exercitation sunt minim.",
     "contributors": [
         {
             "name": "Sebastian Inman",
             "email": "inman.sebastian@gmail.com"
         }
     ],
+    "engines": {
+        "node": ">=22.4.0",
+        "pnpm": ">=9.0.0"
+    },
+    "workspaces": [
+        "packages/**",
+        "services/**",
+        "websites/**"
+    ],
+    "scripts": {
+        "dev:cerakote.com": "pnpm --filter @nic/cerakote.com dev"
+    },
     "devDependencies": {
+        "@sveltejs/adapter-node": "5.2.0",
+        "@sveltejs/kit": "2.5.18",
+        "@sveltejs/vite-plugin-svelte": "3.1.1",
         "@types/node": "20.14.11",
+        "@typescript-eslint/eslint-plugin": "7.16.1",
+        "@typescript-eslint/parser": "7.16.1",
         "autoprefixer": "10.4.19",
         "cssnano": "7.0.4",
         "cssnano-preset-lite": "4.0.1",
-        "eslint": "9.7.0",
+        "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-node": "11.1.0",
         "postcss": "8.4.39",
@@ -22,7 +40,11 @@
         "prettier-plugin-css-order": "2.1.2",
         "stylelint": "16.7.0",
         "stylelint-config-standard": "36.0.1",
+        "svelte": "4.2.18",
+        "svelte-check": "3.8.4",
         "tslib": "2.6.3",
-        "typescript": "5.5.3"
+        "typescript": "5.5.3",
+        "vite": "5.3.4",
+        "vite-raw-plugin": "1.0.2"
     }
 }
