--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
             "email": "inman.sebastian@gmail.com"
         }
     ],
-    "engines": {
-        "node": ">=22.4.0",
-        "pnpm": ">=9.0.0"
-    },
     "workspaces": [
         "packages/**",
         "services/**",
@@ -21,9 +17,11 @@
         "dev:cerakote.com": "pnpm --filter @nic/cerakote.com dev"
     },
     "devDependencies": {
+        "@nic/helpers": "workspace:*",
         "@sveltejs/adapter-node": "5.2.0",
         "@sveltejs/kit": "2.5.18",
         "@sveltejs/vite-plugin-svelte": "3.1.1",
+        "@types/eslint": "8.56.10",
         "@types/node": "20.14.11",
         "@typescript-eslint/eslint-plugin": "7.16.1",
         "@typescript-eslint/parser": "7.16.1",
@@ -33,17 +31,22 @@
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-node": "11.1.0",
+        "eslint-plugin-svelte": "2.43.0",
+        "globals": "15.8.0",
         "postcss": "8.4.39",
         "postcss-import": "16.1.0",
         "postcss-nested": "6.0.1",
         "prettier": "3.3.3",
         "prettier-plugin-css-order": "2.1.2",
+        "prettier-plugin-svelte": "3.2.6",
         "stylelint": "16.7.0",
         "stylelint-config-standard": "36.0.1",
         "svelte": "4.2.18",
         "svelte-check": "3.8.4",
+        "svelte-eslint-parser": "0.41.0",
         "tslib": "2.6.3",
         "typescript": "5.5.3",
+        "typescript-eslint": "7.16.1",
         "vite": "5.3.4",
         "vite-raw-plugin": "1.0.2"
     }
